--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -4,96 +4,96 @@
 <footer id="footer">
   <div id="globalfooter" class="container-fluid">
     <div class="container">
-      <div class="row footercontent" role="menubar" aria-label="Navigation">
+      <div class="row footercontent" aria-label="Navigation">
         <div class="col-xs-3 footercolumn">
-          <h3 data-heading="toggle" class="footer-heading visible-desktop hidden-xs">Københavns Universitet</h3>
-          <h3 data-heading="toggle" class="footer-heading visible-mobil visible-xs-block hidden-sm">Organisation</h3>
-          <ul class="footerlinks" role="menu">
-            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/ledelse-strategi/">Ledelse</a></li>
-            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
-            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
-            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
-            <li role="presentation"><a role="menuitem" href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
-            <li role="presentation"><a role="menuitem" href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
-            <li role="presentation"><a role="menuitem" href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
-            <li role="presentation"><a role="menuitem" href="http://kubis.ku.dk">Biblioteker</a></li>
-            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
-          </ul>
-        </div>
-        <div class="col-xs-3 footercolumn">
-          <h3 data-heading="toggle" class="footer-heading">Kontakt</h3>
-          <ul class="footerlinks" role="menu">
-            <li role="presentation"><a role="menuitem" href="http://findvej.ku.dk">Find vej</a></li>
-            <li role="presentation"><a role="menuitem" href="http://ku.dk/vejviser">Find en medarbejder</a></li>
-            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
-          </ul>
-          <h3 data-heading="toggle" class="footer-heading">Services</h3>
-          <ul class="footerlinks" role="menu">
-            <li role="presentation"><a role="menuitem" href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
-            <li role="presentation"><a role="menuitem" href="http://designguide.ku.dk">Designguide</a></li>
-            <li role="presentation"><a role="menuitem" href="http://ku-shop.dk">Merchandise</a></li>
-            <li role="presentation"><a role="menuitem" href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
-            <li role="presentation"><a role="menuitem" href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
-          </ul>
-        </div>
-        <div class="col-xs-3 footercolumn">
-          <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
-          <ul class="footerlinks" role="menu">
-            <li role="presentation"><a role="menuitem" class="padlock" href="http://intranet.ku.dk">KUnet</a><span class="icon icon-padlock"></span></li>
-          </ul>
-          <h3 data-heading="toggle" class="footer-heading">Job og karriere</h3>
-          <ul class="footerlinks" role="menu">
-            <li role="presentation"><a role="menuitem" href="http://jobportal.ku.dk">Jobportalen</a></li>
-            <li role="presentation"><a role="menuitem" href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
-            <li role="presentation"><a role="menuitem" href="http://alumni.ku.dk">Alumne</a></li>
-          </ul>
-          <h3 data-heading="toggle" class="footer-heading">Nødsituationer</h3>
+          <h2 data-heading="toggle" class="footer-heading visible-desktop hidden-xs">Københavns Universitet</h2>
+          <h2 data-heading="toggle" class="footer-heading visible-mobil visible-xs-block hidden-sm">Organisation</h2>
           <ul class="footerlinks">
-            <li role="presentation"><a role="menuitem" href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
+            <li><a href="http://velkommen.ku.dk/ledelse-strategi/">Ledelse</a></li>
+            <li><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
+            <li><a href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
+            <li><a href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
+            <li><a href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
+            <li><a href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
+            <li><a href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
+            <li><a href="http://kubis.ku.dk">Biblioteker</a></li>
+            <li><a href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
           </ul>
         </div>
         <div class="col-xs-3 footercolumn">
-          <h3 data-heading="toggle" class="footer-heading">Web</h3>
-          <ul class="footerlinks" role="menu">
-            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
-            <li role="presentation"><a role="menuitem" href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
-            <li role="presentation"><a role="menuitem" href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
-            <li role="presentation"><a role="menuitem" href="https://om.ku.dk/indeks/">A-Å-indeks</a></li>
+          <h2 data-heading="toggle" class="footer-heading">Kontakt</h2>
+          <ul class="footerlinks">
+            <li><a href="http://findvej.ku.dk">Find vej</a></li>
+            <li><a href="http://ku.dk/vejviser">Find en medarbejder</a></li>
+            <li><a href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
+          </ul>
+          <h2 data-heading="toggle" class="footer-heading">Services</h2>
+          <ul class="footerlinks">
+            <li><a href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
+            <li><a href="http://designguide.ku.dk">Designguide</a></li>
+            <li><a href="http://ku-shop.dk">Merchandise</a></li>
+            <li><a href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
+            <li><a href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-3 footercolumn">
+          <h2 data-heading="toggle" class="footer-heading">For studerende og ansatte</h2>
+          <ul class="footerlinks">
+            <li><a class="padlock" href="http://intranet.ku.dk">KUnet</a><span class="icon icon-padlock"></span></li>
+          </ul>
+          <h2 data-heading="toggle" class="footer-heading">Job og karriere</h2>
+          <ul class="footerlinks">
+            <li><a href="http://jobportal.ku.dk">Jobportalen</a></li>
+            <li><a href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
+            <li><a href="http://alumni.ku.dk">Alumne</a></li>
+          </ul>
+          <h2 data-heading="toggle" class="footer-heading">Nødsituationer</h2>
+          <ul class="footerlinks">
+            <li><a href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-3 footercolumn">
+          <h2 data-heading="toggle" class="footer-heading">Web</h2>
+          <ul class="footerlinks">
+            <li><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
+            <li><a href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
+            <li><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
+            <li><a href="https://om.ku.dk/indeks/">A-Å-indeks</a></li>
           </ul>
           <div class="social-items">
-            <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
+            <h2 class="footer-heading" data-heading="open">Mød KU på</h2>
             <div class="social-item">
-              <a target="_blank" href="https://www.facebook.com/universitet" class="social-icon icon-facebook" title="Facebook" rel="noopener"></a>
+              <a aria-label="KU på Facebook" class="social-icon" href="https://www.facebook.com/universitet"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-facebook"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="social-icon icon-linkedin" title="LinkedIn" rel="noopener"></a>
+              <a aria-label="KU på LinkedIn" class="social-icon" href="https://www.linkedin.com/school/university-of-copenhagen/"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-linkedin"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.instagram.com/university_of_copenhagen/" class="social-icon icon-instagram" title="Instagram" rel="noopener"></a>
+              <a aria-label="KU på Instagram" class="social-icon" href="https://www.instagram.com/university_of_copenhagen/"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-instagram"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="social-icon icon-twitter" title="Twitter" rel="noopener"></a>
+              <a aria-label="KU på Twitter" class="social-icon" href="https://twitter.com/koebenhavns_uni"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-twitter"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://velkommen.ku.dk/apps" class="social-icon icon-phone" title="KU Apps"></a>
+              <a aria-label="KU på YouTube" class="social-icon" href="https://www.youtube.com/user/CopenhagenUniversity"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-youtube"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://nyheder.ku.dk/rss/" class="social-icon icon-rss" title="RSS"></a>
+              <a aria-label="KU Videoportal" class="social-icon" href="https://video.ku.dk"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-video"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="social-icon icon-youtube" title="YouTube" rel="noopener"></a>
+              <a aria-label="KU Apps" class="social-icon" href="https://om.ku.dk/apps/" ><span aria-hidden="true" class="icon icon-phone"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="social-icon icon-futurity" title="futurity" rel="noopener"></a>
+              <a aria-label="KU på Futurity" class="social-icon" href="https://www.futurity.org/university/university-of-copenhagen/"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-futurity"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="social-icon icon-conversation" title="The Conversation" rel="noopener"></a>
+              <a aria-label="KU på The Conversation" class="social-icon" href="https://theconversation.com/institutions/university-of-copenhagen-1186"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-conversation"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.coursera.org/ucph" class="social-icon icon-coursera" title="Coursera" rel="noopener"></a>
+              <a aria-label="KU på Coursera" class="social-icon" href="https://www.coursera.org/ucph"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-coursera"></span></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://video.ku.dk" class="social-icon icon-video" title="KU Videoportal"></a>
+              <a aria-label="Nyheder RSS" class="social-icon" href="https://nyheder.ku.dk/rss/"  rel="noopener" target="_blank"><span aria-hidden="true" class="icon icon-rss"></span></a>
             </div>
           </div>
         </div>
