--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -24,6 +24,6 @@
     </nav>
     {% include nav/ku-nav.html %}
     {{ content }}
-    {% include global-footer.html %}½
+    {% include global-footer.html %}
   </body>
 </html>
