--- a/less/navbar.less
+++ b/less/navbar.less
@@ -375,14 +375,18 @@
         width: 100%;
         min-width: 350px;
         padding: 5px 10px 5px 7px;
-        overflow: hidden;
-        white-space: normal;
+        // overflow: hidden;
+        // white-space: normal;
 
         > a {
-          display: inline;
           line-height: 1.3;
           padding: 0;
           white-space: normal;
+          -webkit-line-clamp: 3;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          display: -webkit-box;
+          clear: none;
 
           &:focus,
           &:hover {
@@ -390,11 +394,15 @@
           }
         }
 
+        .small {
+          margin-top: 5px;
+        }
+
         img {
           max-width: 115px;
           display: block;
           float: left;
-          margin: 0 8px 5px 0;
+          margin: 0 8px 0 0;
         }
 
         + li {
