Footer social icons tweak

--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -165,9 +165,7 @@
       align-items: center;
       justify-content: center;
       text-decoration: none;
-      // &::before {
-      //   .icon;
-      // }
+
       &:active {
         background-color: @ku-footer-icon-bg;
       }
@@ -178,8 +176,9 @@
       }
 
       & > span {
-        border-radius: inherit;
         width: 100%;
+        height: 100%;
+        top: 2px;
         text-align: center;
       }
     }
