Footer social icons

--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -178,9 +178,13 @@
       & > span {
         width: 100%;
         height: 100%;
-        top: 2px;
         text-align: center;
         border-radius: inherit;
+
+        &:before {
+          position: relative;
+          top: 3px;
+        }
       }
     }
   }
