--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -199,3 +199,60 @@
 iframe {
   border: 0;
 }
+
+.cookiefilter {
+  position: relative;
+  min-height: 150px;
+  background-color: @well-bg;
+  color: @text-color;
+  border: 1px solid @well-border;
+  padding: 15px;
+  margin-bottom: @grid-gutter-by-half;
+  border-radius: @border-radius-base;
+  &:extend(.clearfix all);
+  .icon-exclamation;
+
+  &::before {
+    .icon;
+    position: absolute;
+    font-size: 156px;
+    opacity: 0.075;
+    top: 5px;
+    right: 0;
+  }
+}
+
+.cookiefilter-header {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: @line-height-small;
+}
+// Special styling for placeholder in right columns:
+
+.right-side {
+  .cookiefilter {
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+
+    &::before {
+      font-size: 80px;
+      top: 0;
+    }
+
+    p {
+      margin: 6px 0 9px;
+    }
+  }
+
+  .cookiefilter-header {
+    font-size: 14px;
+    line-height: 18px;
+
+    &+ p {
+      &:first-of-type {
+        display: none;
+      }
+    }
+  }
+}
