--- a/less/variables.less
+++ b/less/variables.less
@@ -992,8 +992,8 @@
 //
 //##
 
-@code-color:                  #c7254e;
-@code-bg:                     #f9f2f4;
+@code-color:                  @ku-red;//#c7254e;
+@code-bg:                     #fbfbfb;//#f9f2f4;
 
 @kbd-color:                   @white-color;
 @kbd-bg:                      #333;
