--- a/less/ku-swiperjs.less
+++ b/less/ku-swiperjs.less
@@ -12,10 +12,7 @@
   --swiper-theme-color: @themeColor;
 }
 
-:root {
-  --swiper-theme-color: @themeColor;
-}
-.swiper {
+.swiper-container {
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -25,9 +22,11 @@
   /* Fix of Webkit flickering */
   z-index: 1;
 }
-.swiper-vertical > .swiper-wrapper {
+
+.swiper-container-vertical > .swiper-wrapper {
   flex-direction: column;
 }
+
 .swiper-wrapper {
   position: relative;
   width: 100%;
@@ -37,58 +36,79 @@
   transition-property: transform;
   box-sizing: content-box;
 }
-.swiper-android .swiper-slide,
+
+.swiper-container-android .swiper-slide,
 .swiper-wrapper {
   transform: translate3d(0px, 0, 0);
 }
 
-.swiper-pointer-events {
+.swiper-container-multirow > .swiper-wrapper {
+  flex-wrap: wrap;
+}
+
+.swiper-container-multirow-column > .swiper-wrapper {
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.swiper-container-free-mode > .swiper-wrapper {
+  transition-timing-function: ease-out;
+  margin: 0 auto;
+}
+
+.swiper-container-pointer-events {
   touch-action: pan-y;
-  &.swiper-vertical {
+
+  &.swiper-container-vertical {
     touch-action: pan-x;
   }
 }
+
 .swiper-slide {
   flex-shrink: 0;
   width: 100%;
   height: 100%;
   position: relative;
   transition-property: transform;
+  &:focus, &:active {
+    .tab-focus-v2();
+    outline-offset: -1px;
+  }
 }
+
 .swiper-slide-invisible-blank {
   visibility: hidden;
 }
 /* Auto Height */
-.swiper-autoheight,
-.swiper-autoheight .swiper-slide {
+
+.swiper-container-autoheight,
+.swiper-container-autoheight .swiper-slide {
   height: auto;
 }
-.swiper-autoheight .swiper-wrapper {
+
+.swiper-container-autoheight .swiper-wrapper {
   align-items: flex-start;
   transition-property: transform, height;
 }
-
 /* 3D Effects */
-.swiper-3d {
-  &,
-  &.swiper-css-mode .swiper-wrapper {
-    perspective: 1200px;
-  }
-  .swiper-wrapper,
+
+.swiper-container-3d {
+  perspective: 1200px;
+
+  .swiper-cube-shadow,
   .swiper-slide,
-  .swiper-slide-shadow,
+  .swiper-slide-shadow-bottom,
   .swiper-slide-shadow-left,
   .swiper-slide-shadow-right,
   .swiper-slide-shadow-top,
-  .swiper-slide-shadow-bottom,
-  .swiper-cube-shadow {
+  .swiper-wrapper {
     transform-style: preserve-3d;
   }
-  .swiper-slide-shadow,
+
+  .swiper-slide-shadow-bottom,
   .swiper-slide-shadow-left,
   .swiper-slide-shadow-right,
-  .swiper-slide-shadow-top,
-  .swiper-slide-shadow-bottom {
+  .swiper-slide-shadow-top {
     position: absolute;
     left: 0;
     top: 0;
@@ -97,79 +117,53 @@
     pointer-events: none;
     z-index: 10;
   }
-  .swiper-slide-shadow {
-    background: rgba(0, 0, 0, 0.15);
-  }
+
   .swiper-slide-shadow-left {
     background-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   }
+
   .swiper-slide-shadow-right {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   }
+
   .swiper-slide-shadow-top {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   }
+
   .swiper-slide-shadow-bottom {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   }
 }
-
 /* CSS Mode */
-.swiper-css-mode {
+
+.swiper-container-css-mode {
   > .swiper-wrapper {
     overflow: auto;
-    scrollbar-width: none; /* For Firefox */
-    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+    scrollbar-width: none;
+    /* For Firefox */
+    -ms-overflow-style: none;
+    /* For Internet Explorer and Edge */
     &::-webkit-scrollbar {
       display: none;
     }
   }
+
   > .swiper-wrapper > .swiper-slide {
     scroll-snap-align: start start;
   }
 }
-.swiper-horizontal.swiper-css-mode {
+
+.swiper-container-horizontal.swiper-container-css-mode {
   > .swiper-wrapper {
     scroll-snap-type: x mandatory;
   }
 }
-.swiper-vertical.swiper-css-mode {
+
+.swiper-container-vertical.swiper-container-css-mode {
   > .swiper-wrapper {
     scroll-snap-type: y mandatory;
   }
 }
-.swiper-centered {
-  > .swiper-wrapper::before {
-    content: '';
-    flex-shrink: 0;
-    order: 9999;
-  }
-  &.swiper-horizontal {
-    > .swiper-wrapper > .swiper-slide:first-child {
-      margin-inline-start: var(--swiper-centered-offset-before);
-    }
-    > .swiper-wrapper::before {
-      height: 100%;
-      min-height: 1px;
-      width: var(--swiper-centered-offset-after);
-    }
-  }
-  &.swiper-vertical {
-    > .swiper-wrapper > .swiper-slide:first-child {
-      margin-block-start: var(--swiper-centered-offset-before);
-    }
-    > .swiper-wrapper::before {
-      width: 100%;
-      min-width: 1px;
-      height: var(--swiper-centered-offset-after);
-    }
-  }
-
-  > .swiper-wrapper > .swiper-slide {
-    scroll-snap-align: center center;
-  }
-}
-
 // KU specific:
 @media (max-width: @screen-sm-max) {
   .swiper-slide {
