Code style color

--- a/less/variables.less
+++ b/less/variables.less
@@ -993,7 +993,7 @@
 //##
 
 @code-color:                  @ku-red;//#c7254e;
-@code-bg:                     #fbfbfb;//#f9f2f4;
+@code-bg:                     @gray-lighter;//#f9f2f4;
 
 @kbd-color:                   @white-color;
 @kbd-bg:                      #333;
