--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -94,7 +94,7 @@ blockquote.full-width::before {
 
   .manchet {
     font-size: 18px;
-    margin: 23px 0;
+    margin: 23px 0 30px 0;
   }
 
   .nyhedsdato {
