--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -1,6 +1,5 @@
 // KU CMS tags
 /* Special admin styles */
-
 tag-selection-control {
   div[role="tablist"],
   div[role="tablist"] > .panel,
@@ -155,6 +154,10 @@ tag-finder {
       background-color: @white-color;
       display: flex;
       flex-direction: column;
+
+      &* {
+        background-color: @white-color;
+      }
     }
   }
 }
