Backend tags styling

--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -155,7 +155,7 @@ tag-finder {
       display: flex;
       flex-direction: column;
 
-      &* {
+      * {
         background-color: @white-color;
       }
     }
