Admin tags styling

--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -91,6 +91,7 @@ tag-selection {
   }
 
   .label {
+    font-size: 95%;
     flex: 0 1 auto;
     display: flex;
     flex-flow: row nowrap;
@@ -116,7 +117,7 @@ tag-selection {
 }
 
 tag-finder {
-  box-shadow: 0.25rem 0.25rem 0.5rem hsl(0,0%,0%,.33);
+  box-shadow: 0.25rem 0.25rem 0.5rem hsl(@gray-base,.33);
   display: flex;
   flex-flow: row nowrap;
   align-items: stretch;
