--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -100,9 +100,11 @@ tag-selection {
   }
 
   .close {
+    font-size: 20px;
     float: none;
     color: @white-color;
-    margin-left: 0.25rem;
+    opacity: 1;
+    margin-left: 0.35rem;
 
     &:focus,
     &:hover {
