--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -184,7 +184,7 @@ tag-browser {
     .list-group {
       margin: 0;
       border-right: solid 1px @gray-ddd;
-      width: 15rem;
+      width: 33%;
       overflow-y: auto;
       overflow-x: hidden;
     }
@@ -197,8 +197,8 @@ tag-browser {
       }
 
       &.selected {
-        background-color: #577d7f;
-        border-color: #577d7f;
+        background-color: @btn-info-bg;
+        border-color: @btn-info-border;
         color: #fff;
       }
 
