--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -35,6 +35,10 @@ tag-selection-control {
 
   .panel-accordion {
     max-width: 826px;
+
+    .panel-collapse {
+      background-color: @white-color;
+    }
   }
 
   .collapse-header-wrapper {
