--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -76,7 +76,7 @@
 @import "ku-datetimepicker.less";
 @import "ku-privacypolicy.less";
 @import "ku-social-boxtop.less";
-@import "ku-tags.less";
+//@import "ku-tags.less";
 //@import "ku-gridboxes-bootstrap.less";
 @import "ku-legacy.less";
 @import "ku-custom-elements.less";
